# qbs

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  qbs.rc.in
cmake/: convert_png_to_ico.cmake  icon_helper.cmake
include/: QBS_batch.h  QBS_breport.h  QBS_call.h  QBS_card_table.h  QBS_charth.h  QBS_consts.h  QBS_data.h  QBS_dormant.h  QBS_import.h  QBS_notes.h  QBS_top20.h  QBS_window.h  timestamp.h  timestamp.h.in
src/: QBS_batch.cpp  QBS_breport.cpp  QBS_call.cpp  QBS_card_table.cpp  QBS_charth.cpp  QBS_data.cpp  QBS_dormant.cpp  QBS_file.cpp  QBS_import.cpp  QBS_main.cpp  QBS_notes.cpp  QBS_top20.cpp  QBS_window.cpp  app.cpp  ident.cpp  ident.cpp.in
